SUBDIRS  = lib
SUBDIRS += po
SUBDIRS += 001
SUBDIRS += 003
SUBDIRS += 004
SUBDIRS += 005
SUBDIRS += 006
SUBDIRS += 007
SUBDIRS += 008
SUBDIRS += 010
SUBDIRS += 011
SUBDIRS += 012
SUBDIRS += 013
SUBDIRS += 014
SUBDIRS += 015
SUBDIRS += 016
SUBDIRS += 017
SUBDIRS += 018
SUBDIRS += 019
SUBDIRS += 020
SUBDIRS += 021
SUBDIRS += 022
SUBDIRS += 023
SUBDIRS += 024
SUBDIRS += 025
SUBDIRS += 026
SUBDIRS += 027
SUBDIRS += 028
SUBDIRS += 029
SUBDIRS += 030
SUBDIRS += 031
SUBDIRS += 032

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath m4/ChangeLog
