SUBDIRS  = intl
SUBDIRS += lib
SUBDIRS += po
SUBDIRS += src
SUBDIRS += 003
SUBDIRS += 004
SUBDIRS += 005
SUBDIRS += 006
SUBDIRS += 007
SUBDIRS += 008
SUBDIRS += 010
SUBDIRS += 011
SUBDIRS += 012
SUBDIRS += 013
SUBDIRS += 014
SUBDIRS += 015
SUBDIRS += 016
SUBDIRS += 017
SUBDIRS += 018
SUBDIRS += 019
SUBDIRS += 020
SUBDIRS += 021
SUBDIRS += 022
SUBDIRS += 023
SUBDIRS += 024
SUBDIRS += 025
SUBDIRS += 026
SUBDIRS += 027
SUBDIRS += 028
SUBDIRS += 029
SUBDIRS += 030
SUBDIRS += 031
SUBDIRS += 032
SUBDIRS += 033
SUBDIRS += 034
SUBDIRS += 039
SUBDIRS += 040
SUBDIRS += 041
SUBDIRS += 043
SUBDIRS += 044
SUBDIRS += 045
SUBDIRS += 046
SUBDIRS += 047
SUBDIRS += 048
SUBDIRS += 049
SUBDIRS += 050
SUBDIRS += 051
SUBDIRS += 052

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath m4/ChangeLog
