SUBDIRS  =          \
        libstudy    \
        include     \
        po          \
        src         \
        pthreads    \
        tests

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = ./m4/ChangeLog config.rpath README.md LICENSE
DISTCLEANFILES=test-driver config.rpath config.sub missing depcomp config.guess compile ar-lib ltmain.sh install-sh
