add_executable(condTimedWait condTimedWait.c)
target_link_libraries(condTimedWait PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(condWait condWait.c)
add_executable(fastPrimeNumber fastPrimeNumber.c)
add_executable(fastPrimeNumber2 fastPrimeNumber2.c)
add_executable(firstThread firstThread.c)
add_executable(firstThread2 firstThread2.c)
add_executable(firstThread3 firstThread3.c)
add_executable(firstThread4-1 firstThread4-1.c)
add_executable(firstThread4 firstThread4.c)
add_executable(fly fly.c)
target_link_libraries(fly m)
add_executable(fly2 fly2.c)
target_link_libraries(fly2 m)
add_executable(fly2rwlock fly2rwlock.c)
target_link_libraries(fly2rwlock m)
add_executable(fly3 fly3.c)
target_link_libraries(fly3 m)
add_executable(primeNumber primeNumber.c)
add_executable(primeNumber2 primeNumber2.c)
add_executable(primeNumber3 primeNumber3.c)
add_executable(primeNumber4 primeNumber4.c)
add_executable(primeNumber5 primeNumber5.c)
add_executable(variablesProc variablesProc.c)
