add_executable(condTimedWait condTimedWait.c)
target_link_libraries(condTimedWait PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(condWait condWait.c)
target_link_libraries(condWait PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(fastPrimeNumber fastPrimeNumber.c)
target_link_libraries(fastPrimeNumber PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(fastPrimeNumber2 fastPrimeNumber2.c)
target_link_libraries(fastPrimeNumber2 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(firstThread firstThread.c)
target_link_libraries(firstThread PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(firstThread2 firstThread2.c)
target_link_libraries(firstThread2 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(firstThread3 firstThread3.c)
target_link_libraries(firstThread3 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(firstThread4-1 firstThread4-1.c)
target_link_libraries(firstThread4-1 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(firstThread4 firstThread4.c)
target_link_libraries(firstThread4 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(fly fly.c)
target_link_libraries(fly PRIVATE m ${CMAKE_THREAD_LIBS_INIT})
add_executable(fly2 fly2.c)
target_link_libraries(fly2 PRIVATE m ${CMAKE_THREAD_LIBS_INIT})
add_executable(fly2rwlock fly2rwlock.c)
target_link_libraries(fly2rwlock PRIVATE m ${CMAKE_THREAD_LIBS_INIT})
add_executable(fly3 fly3.c)
target_link_libraries(fly3 PRIVATE m ${CMAKE_THREAD_LIBS_INIT})
add_executable(primeNumber primeNumber.c)
target_link_libraries(primeNumber PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(primeNumber2 primeNumber2.c)
target_link_libraries(primeNumber2 PRIVATE m ${CMAKE_THREAD_LIBS_INIT})
add_executable(primeNumber3 primeNumber3.c)
target_link_libraries(primeNumber3 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(primeNumber4 primeNumber4.c)
target_link_libraries(primeNumber4 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(primeNumber5 primeNumber5.c)
target_link_libraries(primeNumber5 PRIVATE ${CMAKE_THREAD_LIBS_INIT})
add_executable(variablesProc variablesProc.c)
target_link_libraries(variablesProc PRIVATE ${CMAKE_THREAD_LIBS_INIT})
