
bin_PROGRAMS= \
	condTimedWait \
	condWait \
	fastPrimeNumber \
	fastPrimeNumber2 \
	firstThread \
	firstThread2 \
	firstThread3 \
	firstThread4 \
	firstThread4-1 \
	fly \
	fly2 \
	fly2rwlock \
	fly3 \
	primeNumber \
	primeNumber2 \
	primeNumber3 \
	primeNumber4 \
	primeNumber5 \
	soloFly \
	soloFly2 \
	soloFly2-2 \
	variables \
	variables3 \
	variables4 \
	variables5 \
	variablesProc


AM_CPPFLAGS=-Wall -Wextra -pedantic -Wcast-align -Wcast-qual -Wconversion -Wdisabled-optimization -Wendif-labels -Wfloat-equal -Winit-self -Winline -Wlogical-op -Wmissing-include-dirs -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wswitch-default -Wswitch-enum -Wunsafe-loop-optimizations -Wvariadic-macros -Wwrite-strings -I$(top_srcdir)/libstudy/include -DLOCALEDIR='"$(localedir)"' -DSTUDYDATADIR='"$(studydatadir)"'
condTimedWait_SOURCES=condTimedWait.c
condWait_SOURCES=condWait.c
fly_SOURCES=fly.c
fly2_SOURCES=fly2.c
fly2rwlock_SOURCES=fly2.c
soloFly_SOURCES=soloFly.c
soloFly2_SOURCES=soloFly2.c
soloFly2_2_SOURCES=soloFly2-2.c
